[metadata]
name = test-starknet-contracts
version = attr: chainlink.__version__
description = Library for secure smart contract development written in Cairo
author = Me
author_email = myself@openzeppelin.org
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/smartcontractkit/chainlink-starknet
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir = 
    =src

install_requires =
    importlib-metadata>=4.0

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
chainlink = 
    "*.cairo"
    "*.sol"

[options.extras_require]
testing =
    setuptools
    pytest
