[metadata]
name = chainlink-cairo
version = attr: chainlink.__version__
description = Library for secure smart contract development written in Cairo
author = Me
author_email = myself@openzeppelin.org
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/smartcontractkit/chainlink-starknet
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
zip_safe = False
packages = chainlink-cairo
include_package_data = True
package_dir = 
    chainlink-cairo = src/chainlink/cairo
install_requires =
    importlib-metadata>=4.0


[options.extras_require]
testing =
    setuptools
    pytest
